using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class BossCharacterClass : EnemyCharacterClass
{
 //forse classe inutile da vedere
    public virtual void Attack1()
    {

    }
    public virtual void Attack2()
    {
    }
    public virtual void Attack3()
    {

    }
}
