using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.InputSystem;

public class TutorialBoss : BossCharacterClass
{
    //Raffica di pugni
    public override void Attack1()
    {
       //raffica pugni
    }

    //carica
    public override void Attack2()
    {

    }

    //schianto
    public override void Attack3()
    {
        
    }

}
